# giphybot

./: Cargo.toml  README.md  message_test.sh  partial-message.msgpack  test-message.msgpack  test-message2.msgpack  test_giphy_msg.msgpack
src/: braid.rs  conf.rs  giphy.rs  main.rs  message.rs  routing.rs
