[package]
name = "giphybot"
version = "0.1.0"
authors = ["James N. V. Cash <james.nvc@gmail.com>"]

[dependencies]
iron = "^0.6"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
rmp = "^0.8"
rmp-serde = "^0.13"
uuid = { version = "^0.7", features = ["v4"] }
byteorder = "^1.2"
toml = "^0.4"
hyper = "^0.12"
regex = "^1.0"
lazy_static = "^1.1"
mime = "^0.3"
openssl = "^0.10"
rustc-serialize = "^0.3"
base64 = "^0.9"
urlencoding = "1.0.0"
futures = "0.1"

[profile.release]
lto = true
